--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
-    <string name="singup">SginUp</string>
+    <string name="sing_up">SignUp</string>
     <string name="welcome_to_the_shoe_store">Welcome to the shoe Store !!</string>
     <string name="welcome_details">In our shop, you\'ll find all the kinds of shoes of all marks and brands. We are sure that you\'ll find the shoe that suits your feet !!</string>
     <string name="next">Next</string>
@@ -16,4 +16,17 @@
     <string name="save">Save</string>
     <string name="logout">Logout</string>
 
+    <!--  ItemDetail  -->
+    <string name="item_name">Name: %1$s</string>
+    <string name="item_company">Company: %1$s</string>
+    <string name="item_size">Size: %1$s</string>
+    <string name="item_description">Description: %1$s</string>
+
+    <string name="shoe_size">Shoe Size</string>
+    <string name="description">Description</string>
+    <string name="guide_message">You can add new item using plus sign + \n After choosing plus sign + , you can customize your new item (its name, size company and description) \n Enjoy the app and explore it !!</string>
+    <string name="fragment_login_title">Login</string>
+    <string name="fragment_welcome_title">Welcome</string>
+    <string name="fragment_instructions_title">Instructions</string>
+    <string name="fragment_shoes_list_title">Shoes List</string>
 </resources>
